--- a/index.html
+++ b/index.html
@@ -992,176 +992,92 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
   document.getElementById("weightInput").value = '';
 }
 
-  async function renderPhotoPosts() {
-  const gallery = document.getElementById("photoGallery");
-  gallery.innerHTML = "";
+  shareButton.addEventListener("click", () => {
+  const clone = card.cloneNode(true);
+  clone.style.position = 'fixed';
+  clone.style.top = '-10000px';
+  clone.style.left = '0';
+  clone.style.background = '#000';
 
-  const photos = await getAllPhotosFromDB();
+  // Remove buttons from clone
+  const buttons = clone.querySelector(".catch-buttons");
+  if (buttons) buttons.remove();
 
-  photos.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
+  // Add export style class
+  clone.classList.add("export-style");
 
-  photos.forEach((photo) => {
-    const card = document.createElement("div");
-    card.className = "catch-card";
+  // Wrap exported photo in image window for controlled sizing
+  const originalImg = clone.querySelector(".catch-photo");
+  const imageWrapper = document.createElement("div");
+  imageWrapper.className = "image-window";
+  originalImg.parentNode.replaceChild(imageWrapper, originalImg);
+  imageWrapper.appendChild(originalImg);
 
-    const img = document.createElement("img");
-    img.src = photo.src;
-    img.alt = photo.caption || "Catch photo";
-    img.className = "catch-photo";
-    img.addEventListener("click", () => openModal(photo.src));
-    card.appendChild(img);
+  // Select caption and info once
+  const caption = clone.querySelector('.catch-caption');
+  const info = clone.querySelector('.catch-info');
 
-    const info = document.createElement("div");
-    info.className = "catch-info";
+  // Remove weight element from export
+  const weight = clone.querySelector('.catch-weight');
+  if (weight) weight.remove();
 
-    if (photo.caption) {
-      const caption = document.createElement("p");
-      caption.className = "catch-caption";
-      caption.textContent = photo.caption;
-      info.appendChild(caption);
-    }
+  // Remove date element from export
+  const date = clone.querySelector('.catch-date');
+  if (date) date.remove();
 
-    if (photo.location) {
-      const location = document.createElement("p");
-      location.className = "catch-location";
-      location.textContent = "Ability: " + photo.location;
-      info.appendChild(location);
-    }
+  // Move caption outside info block (optional styling)
+  if (caption && info) {
+    info.removeChild(caption);
+    clone.insertBefore(caption, info);
+  }
 
-    if (photo.timestamp) {
-      const date = document.createElement("p");
-      date.className = "catch-date";
-      date.textContent = "Caught: " + new Date(photo.timestamp).toLocaleString();
-      info.appendChild(date);
-    }
+  // Add collectible elements *to clone* BEFORE html2canvas
+  const cardNumber = document.createElement('div');
+  cardNumber.className = 'card-number';
+  cardNumber.textContent = `#${String(photo.id).padStart(3, '0')}`;
+  clone.appendChild(cardNumber);
 
-    if (photo.weight) {
-      const weight = document.createElement("p");
-      weight.className = "catch-weight";
-      weight.textContent = "Weight: " + photo.weight + " lbs";
-      info.appendChild(weight);
-    }
+  // Generate a random rarity between 1 and 5
+  const starsCount = Math.floor(Math.random() * 5) + 1;
 
-    card.appendChild(info);
+  // Add rarity stars to clone
+  const rarity = document.createElement('div');
+  rarity.className = 'catch-rarity';
+  rarity.textContent = '★'.repeat(starsCount) + '☆'.repeat(5 - starsCount);
+  clone.appendChild(rarity);
+  clone.classList.add(`rarity-${starsCount}`);
 
-    const buttonRow = document.createElement("div");
-    buttonRow.className = "catch-buttons";
+  document.body.appendChild(clone);
 
-    const deleteButton = document.createElement("button");
-    deleteButton.textContent = "Delete";
-    deleteButton.title = "Delete this photo";
-    deleteButton.addEventListener("click", async () => {
-      if (confirm("Are you sure you want to delete this photo?")) {
-        await deletePhotoFromDB(photo.id);
-        await renderPhotoPosts();
-      }
-    });
-    buttonRow.appendChild(deleteButton);
+  html2canvas(clone).then(canvas => {
+    const ctx = canvas.getContext("2d");
+    const watermarkImg = new Image();
+    watermarkImg.src = './icon_192x192.png';
 
-    const shareButton = document.createElement("button");
-    shareButton.textContent = "Catch Card";
-    shareButton.title = "Download Catch Card";
+    watermarkImg.onload = () => {
+      ctx.globalAlpha = 1;
+      const size = 64;
+      const padding = 10;
 
-    shareButton.addEventListener("click", () => {
-      const clone = card.cloneNode(true);
-      clone.style.position = 'fixed';
-      clone.style.top = '-10000px';
-      clone.style.left = '0';
-      clone.style.background = '#000';
+      ctx.drawImage(
+        watermarkImg,
+        canvas.width - size - padding,
+        canvas.height - size - padding,
+        size,
+        size
+      );
 
-      // Remove buttons from clone
-      const buttons = clone.querySelector(".catch-buttons");
-      if (buttons) buttons.remove();
+      const link = document.createElement("a");
+      link.download = `catch-card-${photo.id}.png`;
+      link.href = canvas.toDataURL("image/png");
+      link.click();
 
-      // Add export style class
-      clone.classList.add("export-style");
-
-      // Wrap exported photo in image window for controlled sizing
-const originalImg = clone.querySelector(".catch-photo");
-const imageWrapper = document.createElement("div");
-imageWrapper.className = "image-window";
-
-// Move image into new wrapper
-originalImg.parentNode.replaceChild(imageWrapper, originalImg);
-imageWrapper.appendChild(originalImg);
-
-      const caption = clone.querySelector('.catch-caption');
-      const info = clone.querySelector('.catch-info');
-
-      // Remove weight element from export
-      const weight = clone.querySelector('.catch-weight');
-      if (weight) weight.remove();
-
-      const caption = clone.querySelector('.catch-caption');
-const info = clone.querySelector('.catch-info');
-
-// Remove weight element from export
-const weight = clone.querySelector('.catch-weight');
-if (weight) weight.remove();
-
-// Remove date element from export
-const date = clone.querySelector('.catch-date');
-if (date) date.remove();
-
-      if (caption && info) {
-        info.removeChild(caption);        // remove caption from info container
-        clone.insertBefore(caption, info); // insert caption before info in clone
-      }
-
-      // Add collectible elements *to clone* BEFORE html2canvas
-      const cardNumber = document.createElement('div');
-      cardNumber.className = 'card-number';
-      cardNumber.textContent = `#${String(photo.id).padStart(3, '0')}`;
-      clone.appendChild(cardNumber);
-
-      // Generate a random rarity between 1 and 5
-      const starsCount = Math.floor(Math.random() * 5) + 1;
-      // Add rarity stars to clone
-      const rarity = document.createElement('div');
-      rarity.className = 'catch-rarity';
-      rarity.textContent = '★'.repeat(starsCount) + '☆'.repeat(5 - starsCount);
-      clone.appendChild(rarity);
-
-      clone.classList.add(`rarity-${starsCount}`);
-
-      document.body.appendChild(clone);
-
-      html2canvas(clone).then(canvas => {
-        const ctx = canvas.getContext("2d");
-        const watermarkImg = new Image();
-        watermarkImg.src = './icon_192x192.png';
-
-        watermarkImg.onload = () => {
-          ctx.globalAlpha = 1;
-          const size = 64;
-          const padding = 10;
-
-          ctx.drawImage(
-            watermarkImg,
-            canvas.width - size - padding,
-            canvas.height - size - padding,
-            size,
-            size
-          );
-
-          const link = document.createElement("a");
-          link.download = `catch-card-${photo.id}.png`;
-          link.href = canvas.toDataURL("image/png");
-          link.click();
-
-          openInstagramModal();
-          clone.remove();
-          clone.classList.remove("export-style");
-        };
-      });
-    });
-
-    buttonRow.appendChild(shareButton);
-    card.appendChild(buttonRow);
-
-    gallery.appendChild(card);
+      openInstagramModal();
+      clone.remove();
+      clone.classList.remove("export-style");
+    };
   });
-}
+});
 
 // ✅ Now openModal is correctly outside
 function openModal(src) {
