--- a/index.html
+++ b/index.html
@@ -296,12 +296,21 @@
 }
 
 .export-style .catch-photo {
+  position: absolute; /* Needed for translate centering */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;  /* maintain aspect ratio, fit inside */
+  width: auto;
+  height: auto;
+
+  object-fit: contain;
   object-position: center;
   display: block;
   background: transparent;
+  z-index: 1; /* Behind decorative overlay */
 }
 
 .export-style .catch-info {
