--- a/index.html
+++ b/index.html
@@ -296,15 +296,8 @@
 }
 
 .export-style .catch-photo {
-  position: absolute; /* Needed for translate centering */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
 
   object-fit: contain;
   object-position: center;
