--- a/index.html
+++ b/index.html
@@ -283,10 +283,11 @@
 
 .export-style .image-window {
   position: absolute;
-  top: 100px;
-  left: 30px;
+  top: 50%;
+  left: 50%;
   width: 356px;
   height: 415px;
+  transform: translate(-50%, -50%); /* Centers the window */
   overflow: hidden;
   z-index: 1;
   display: flex;
@@ -299,7 +300,7 @@
   width: 100%;
   height: 100%;
 
-  object-fit: contain;
+  object-fit: contain;        /* Maintains aspect ratio */
   object-position: center;
   display: block;
   background: transparent;
