--- a/index.html
+++ b/index.html
@@ -287,24 +287,26 @@
   left: 50%;
   width: 356px;
   height: 415px;
-  transform: translate(-50%, -50%); /* Centers the window */
+  transform: translate(-50%, -50%);
   overflow: hidden;
   z-index: 1;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
   background: transparent;
+  position: relative;
 }
 
 .export-style .catch-photo {
   width: 100%;
   height: 100%;
-
-  object-fit: contain;        /* Maintains aspect ratio */
+  object-fit: cover;
   object-position: center;
   display: block;
   background: transparent;
-  z-index: 1; /* Behind decorative overlay */
+  z-index: 1;
 }
 
 .export-style .catch-info {
